--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@ body {
   <div class="viewer">
 
     <div class="slide active">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_1"
+      <iframe src="https://www.youtube.com/embed/AG5N0ffy7u4"
         allowfullscreen></iframe>
     </div>
 
     <div class="slide">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2"
+      <iframe src="https://www.youtube.com/embed/oxkjHsciVpg"
         allowfullscreen></iframe>
     </div>
 
     <div class="slide">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_3"
+      <iframe src="https://www.youtube.com/embed/Z9saU3wzYMg"
         allowfullscreen></iframe>
     </div>
 
