--- a/index.html
+++ b/index.html
@@ -1,152 +1,49 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div class="portfolio">
 
-<title>YouTube Carousel</title>
-
-<style>
-:root {
-  --accent-color: #FF6B97;
-}
-
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background: transparent;
-  padding: 0;
-}
-
-.carousel {
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-.viewer {
-  position: relative;
-  aspect-ratio: 16 / 9;
-  background: #000;
-  border-radius: 16px;
-  overflow: hidden;
-}
-
-.slide {
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-
-.slide.active {
-  opacity: 1;
-  z-index: 2;
-}
-
-.slide iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-.nav {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background: rgba(255,255,255,0.9);
-  border: none;
-  cursor: pointer;
-  font-size: 18px;
-}
-
-.nav.prev { left: 10px; }
-.nav.next { right: 10px; }
-
-.dots {
-  position: absolute;
-  bottom: 12px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 8px;
-}
-
-.dot {
-  width: 10px;
-  height: 10px;
-  border-radius: 999px;
-  background: rgba(255,255,255,0.5);
-  cursor: pointer;
-}
-
-.dot.active {
-  width: 28px;
-  background: var(--accent-color);
-}
-</style>
-</head>
-
-<body>
-
-<div class="carousel">
+  <!-- 메인 영상 -->
   <div class="viewer">
-
-    <div class="slide active">
-      <iframe src="https://www.youtube.com/embed/AG5N0ffy7u4"
-        allowfullscreen></iframe>
-    </div>
-
-    <div class="slide">
-      <iframe src="https://www.youtube.com/embed/oxkjHsciVpg"
-        allowfullscreen></iframe>
-    </div>
-
-    <div class="slide">
-      <iframe src="https://www.youtube.com/embed/Z9saU3wzYMg"
-        allowfullscreen></iframe>
-    </div>
-
-    <button class="nav prev">◀</button>
-    <button class="nav next">▶</button>
-
-    <div class="dots"></div>
+    <iframe
+      id="mainVideo"
+      src="https://www.youtube.com/embed/VIDEO_ID_1"
+      allowfullscreen>
+    </iframe>
   </div>
+
+  <!-- 작업 정보 -->
+  <div class="info">
+    <h3 id="workTitle">Live2D 리깅 샘플 01</h3>
+    <p id="workDesc">기본 표정 + 상하좌우 추적 / 호흡 모션</p>
+  </div>
+
+  <!-- 썸네일 리스트 -->
+  <div class="thumbs">
+    <div class="thumb active"
+         onclick="changeWork(
+           'VIDEO_ID_1',
+           'Live2D 리깅 샘플 01',
+           '기본 표정 + 상하좌우 추적 / 호흡 모션'
+         )">
+      <img src="https://img.youtube.com/vi/VIDEO_ID_1/mqdefault.jpg">
+    </div>
+
+    <div class="thumb"
+         onclick="changeWork(
+           'VIDEO_ID_2',
+           'Live2D 리깅 샘플 02',
+           '웃음 / 놀람 / 찡그림 표정 전환'
+         )">
+      <img src="https://img.youtube.com/vi/VIDEO_ID_2/mqdefault.jpg">
+    </div>
+
+    <div class="thumb"
+         onclick="changeWork(
+           'VIDEO_ID_3',
+           'Live2D 리깅 샘플 03',
+           '물리 세팅 + 머리카락 흔들림'
+         )">
+      <img src="https://img.youtube.com/vi/VIDEO_ID_3/mqdefault.jpg">
+    </div>
+  </div>
+
 </div>
 
-<script>
-const slides = document.querySelectorAll('.slide');
-const prev = document.querySelector('.prev');
-const next = document.querySelector('.next');
-const dotsWrap = document.querySelector('.dots');
-
-let index = 0;
-
-slides.forEach((_, i) => {
-  const dot = document.createElement('div');
-  dot.className = 'dot' + (i === 0 ? ' active' : '');
-  dot.onclick = () => show(i);
-  dotsWrap.appendChild(dot);
-});
-
-const dots = document.querySelectorAll('.dot');
-
-function show(i) {
-  slides[index].classList.remove('active');
-  dots[index].classList.remove('active');
-  index = i;
-  slides[index].classList.add('active');
-  dots[index].classList.add('active');
-}
-
-prev.onclick = () => show((index - 1 + slides.length) % slides.length);
-next.onclick = () => show((index + 1) % slides.length);
-</script>
-
-</body>
-</html>
