--- a/index.html
+++ b/index.html
@@ -1,49 +1,143 @@
-<div class="portfolio">
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8">
+<title>Live2D Portfolio</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  background: #fafafa;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 16px;
+}
+
+.viewer {
+  aspect-ratio: 16 / 9;
+  background: #000;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.viewer iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.info {
+  margin: 12px 4px;
+}
+
+.info h3 {
+  margin: 0 0 4px;
+  font-size: 18px;
+}
+
+.info p {
+  margin: 0;
+  font-size: 14px;
+  color: #666;
+}
+
+.thumbs {
+  display: flex;
+  gap: 12px;
+  margin-top: 12px;
+  overflow-x: auto;
+}
+
+.thumb {
+  width: 180px;
+  cursor: pointer;
+  opacity: 0.6;
+  border-radius: 12px;
+  overflow: hidden;
+  border: 3px solid transparent;
+}
+
+.thumb img {
+  width: 100%;
+  display: block;
+}
+
+.thumb.active {
+  opacity: 1;
+  border-color: #ff6b97;
+}
+</style>
+</head>
+
+<body>
+<div class="container">
 
   <!-- 메인 영상 -->
   <div class="viewer">
     <iframe
       id="mainVideo"
-      src="https://www.youtube.com/embed/VIDEO_ID_1"
-      allowfullscreen>
+      src="https://www.youtube.com/embed/AG5N0ffy7u4">
     </iframe>
   </div>
 
-  <!-- 작업 정보 -->
+  <!-- 설명 -->
   <div class="info">
     <h3 id="workTitle">Live2D 리깅 샘플 01</h3>
-    <p id="workDesc">기본 표정 + 상하좌우 추적 / 호흡 모션</p>
+    <p id="workDesc">기본 표정 + 시선 추적</p>
   </div>
 
-  <!-- 썸네일 리스트 -->
+  <!-- 썸네일 -->
   <div class="thumbs">
+
     <div class="thumb active"
-         onclick="changeWork(
-           'VIDEO_ID_1',
-           'Live2D 리깅 샘플 01',
-           '기본 표정 + 상하좌우 추적 / 호흡 모션'
-         )">
-      <img src="https://img.youtube.com/vi/VIDEO_ID_1/mqdefault.jpg">
+      onclick="changeWork(
+        'VIDEO_ID_1',
+        'Live2D 리깅 샘플 01',
+        '기본 표정 + 시선 추적'
+      )">
+      <img src="https://img.youtube.com/vi/AG5N0ffy7u4/mqdefault.jpg">
     </div>
 
     <div class="thumb"
-         onclick="changeWork(
-           'VIDEO_ID_2',
-           'Live2D 리깅 샘플 02',
-           '웃음 / 놀람 / 찡그림 표정 전환'
-         )">
-      <img src="https://img.youtube.com/vi/VIDEO_ID_2/mqdefault.jpg">
+      onclick="changeWork(
+        'VIDEO_ID_2',
+        'Live2D 리깅 샘플 02',
+        '표정 전환 / 감정 변화'
+      )">
+      <img src="https://img.youtube.com/vi/oxkjHsciVpg/mqdefault.jpg">
     </div>
 
     <div class="thumb"
-         onclick="changeWork(
-           'VIDEO_ID_3',
-           'Live2D 리깅 샘플 03',
-           '물리 세팅 + 머리카락 흔들림'
-         )">
-      <img src="https://img.youtube.com/vi/VIDEO_ID_3/mqdefault.jpg">
+      onclick="changeWork(
+        'VIDEO_ID_3',
+        'Live2D 리깅 샘플 03',
+        '물리 세팅 / 머리카락 흔들림'
+      )">
+      <img src="https://img.youtube.com/vi/Z9saU3wzYMg/mqdefault.jpg">
     </div>
+
   </div>
-
 </div>
 
+<script>
+function changeWork(videoId, title, desc) {
+  document.getElementById('mainVideo').src =
+    'https://www.youtube.com/embed/' + videoId;
+
+  document.getElementById('workTitle').innerText = title;
+  document.getElementById('workDesc').innerText = desc;
+
+  document.querySelectorAll('.thumb').forEach(t => {
+    t.classList.remove('active');
+  });
+
+  event.currentTarget.classList.add('active');
+}
+</script>
+
+</body>
+</html>
