--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  background: #fafafa;
+  background: #f5f5f5; /* 부드러운 회색 배경 */
+  color: #333;
 }
 
 .container {
   max-width: 960px;
-  margin: 0 auto;
-  padding: 16px;
+  margin: 40px auto;
+  padding: 20px;
+  background: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
 }
 
 .viewer {
   aspect-ratio: 16 / 9;
-  background: #000;
   border-radius: 16px;
   overflow: hidden;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+  border: 3px solid #ff6b97; /* 포인트 색상 테두리 */
 }
 
 .viewer iframe {
@@ -31,12 +36,14 @@ body {
 }
 
 .info {
-  margin: 12px 4px;
+  margin: 16px 0;
+  text-align: center;
 }
 
 .info h3 {
-  margin: 0 0 4px;
-  font-size: 18px;
+  margin: 0 0 6px;
+  font-size: 20px;
+  color: #ff6b97; /* 제목 강조 색상 */
 }
 
 .info p {
@@ -48,27 +55,38 @@ body {
 .thumbs {
   display: flex;
   gap: 12px;
-  margin-top: 12px;
+  margin-top: 16px;
   overflow-x: auto;
+  justify-content: center;
 }
 
 .thumb {
-  width: 180px;
-  cursor: pointer;
-  opacity: 0.6;
+  flex-shrink: 0;
+  width: 160px;
   border-radius: 12px;
   overflow: hidden;
+  cursor: pointer;
+  opacity: 0.7;
   border: 3px solid transparent;
+  transition: all 0.3s ease;
 }
 
 .thumb img {
   width: 100%;
   display: block;
+  border-radius: 12px;
+}
+
+.thumb:hover {
+  transform: translateY(-3px) scale(1.05);
+  opacity: 1;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.15);
 }
 
 .thumb.active {
   opacity: 1;
   border-color: #ff6b97;
+  box-shadow: 0 6px 20px rgba(255,107,151,0.4);
 }
 </style>
 </head>
