--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body {
   <div class="viewer">
     <iframe
       id="mainVideo"
-      src="https://www.youtube.com/embed/Z9saU3wzYMg?si=axrNPPkcnVG-ToGQ">
+      src="https://www.youtube.com/embed/AG5N0ffy7u4">
     </iframe>
   </div>
 
@@ -117,7 +117,7 @@ body {
         'Live2D 리깅 샘플 01',
         '기본 표정 + 시선 추적'
       )">
-      <img src="https://img.youtube.com/vi/Z9saU3wzYMg?si=axrNPPkcnVG-ToGQ/mqdefault.jpg">
+      <img src="https://img.youtube.com/vi/AG5N0ffy7u4/mqdefault.jpg">
     </div>
 
     <div class="thumb"
@@ -126,7 +126,7 @@ body {
         'Live2D 리깅 샘플 02',
         '표정 전환 / 감정 변화'
       )">
-      <img src="https://img.youtube.com/vi/Z9saU3wzYMg?si=axrNPPkcnVG-ToGQ/mqdefault.jpg">
+      <img src="https://img.youtube.com/vi/Z9saU3wzYMg/mqdefault.jpg">
     </div>
 
     <div class="thumb"
@@ -135,7 +135,7 @@ body {
         'Live2D 리깅 샘플 03',
         '물리 세팅 / 머리카락 흔들림'
       )">
-      <img src="https://img.youtube.com/vi/AG5N0ffy7u4?si=_nsez7S7ZI3h8G0j/mqdefault.jpg">
+      <img src="https://img.youtube.com/vi/oxkjHsciVpg/mqdefault.jpg">
     </div>
 
   </div>
