--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  background: #f3f4f6;
-  color: #333;
+  background: transparent;
 }
+
+.container {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  border-radius: 0;
+  box-shadow: none;
+}
+
 
 .container {
   max-width: 1000px;
@@ -157,11 +165,6 @@ body {
     <div class="thumb"
       onclick="changeWork('VIDEO_ID_5','Live2D 리깅 샘플 05','눈 깜빡임 / 미세 모션', this)">
       <img src="https://img.youtube.com/vi/VIDEO_ID_5/mqdefault.jpg">
-    </div>
-
-    <div class="thumb"
-      onclick="changeWork('VIDEO_ID_6','Live2D 리깅 샘플 06','고급 파츠 분리 / 표현 강화', this)">
-      <img src="https://img.youtube.com/vi/VIDEO_ID_6/mqdefault.jpg">
     </div>
 
   </div>
