--- a/index.html
+++ b/index.html
@@ -32,17 +32,30 @@ body{
 
 /* ✅ 타이틀: 둥근 사각 배지 */
 .page-title{
-  margin: 0 0 14px;
+  margin: 0 0 18px;
   display: inline-block;
-  padding: 10px 16px;
+
+  /* ⬇ 가로 여백 넉넉하게 */
+  padding: 14px 36px;
+
+  /* ⬇ 완전 둥근 알약 */
   border-radius: 999px;
-  border: 1px solid var(--border);
-  background: rgba(255,255,255,0.65);
-  color: var(--main-2);
-  font-size: 22px;
+
+  /* ⬇ 테두리 제거 */
+  border: none;
+
+  /* ⬇ 색만 채운 배지 */
+  background: rgba(31, 41, 55, 0.9);
+
+  /* ⬇ 글씨는 밝게 */
+  color: #ffffff;
+
+  /* ⬇ 기존 22px × 1.5 ≈ 33px */
+  font-size: 33px;
   font-weight: 800;
   letter-spacing: -0.02em;
 }
+
 
 
 /* 타이틀 가운데 정렬 */
