--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <style>
 :root{
-  --main: #1f2937;        /* 검은색에 가까운 짙은 회색 */
-  --main-2: #111827;      /* 더 짙은 회색(거의 블랙) */
+  --main: #262626;        /* 검은색에 가까운 짙은 회색 */
+  --main-2: #0D0D0D;      /* 더 짙은 회색(거의 블랙) */
   --muted: rgba(31,41,55,0.75);
   --border: rgba(31,41,55,0.22);
   --hover: rgba(31,41,55,0.10);
@@ -36,10 +36,10 @@ body{
   display: inline-block;
 
   /* ⬇ 가로 여백 넉넉하게 */
-  padding: 10px 70px;
+  padding: 14px 70px;
 
   /* ⬇ 완전 둥근 알약 */
-  border-radius: 10px;
+  border-radius: 20px;
 
   /* ⬇ 테두리 제거 */
   border: none;
