--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 html, body{
   margin:0;
   background:transparent;
-  color:#eaeaea;
+  color:#000;
   font-family:Inter, system-ui, -apple-system, BlinkMacSystemFont;
   font-size:18px;
 }
 
 :root{
-  --line: rgba(255,255,255,.12);
-  --soft: rgba(255,255,255,.08);
-  --section: #203a55;
+  --line:#d0d0d0;          /* 표 선, 구분선 */
+  --soft:#f3f3f3;          /* 헤더/강조 배경 */
+  --section:#e5e5e5;       /* 섹션 바 */
 }
 
 .wrap{
@@ -34,12 +34,14 @@ h2{
   font-size:1.6em;
   font-weight:800;
   margin:1.2em 0 .6em;
+  color:#000;
 }
 
 h3{
   font-size:1.15em;
   font-weight:700;
   margin:.8em 0 .4em;
+  color:#000;
 }
 
 ul{
@@ -55,7 +57,7 @@ table{
   border-collapse:collapse;
   margin:1em 0;
   border:1px solid var(--line);
-  background:rgba(0,0,0,.25);
+  background:#fff;
 }
 
 th, td{
@@ -64,6 +66,7 @@ th, td{
   border-right:1px solid var(--line);
   text-align:left;
   vertical-align:top;
+  color:#000;
 }
 
 th:last-child, td:last-child{border-right:0;}
@@ -71,23 +74,23 @@ tr:last-child td{border-bottom:0;}
 
 thead th{
   font-weight:700;
-  background:rgba(255,255,255,.05);
+  background:var(--soft);
 }
 
-.section-bar{
+.section-bar td{
   background:var(--section);
   font-weight:700;
-  color:#fff;
 }
 
 .note{
   margin:.8em 0;
   line-height:1.6;
+  color:#000;
 }
 
 .small{
   font-size:.95em;
-  opacity:.9;
+  color:#000;
 }
 </style>
 </head>
@@ -217,7 +220,7 @@ thead th{
 <tr>
   <td>Vbridger</td>
   <td>300,000</td>
-  <td>프로그램 별도 구매<br>턱·입·눈썹·눈 연동</td>
+  <td>프로그램 별도 구매</td>
 </tr>
 
 <tr class="section-bar">
